--- a/DianaDynamic/DianaDynamic.csproj
+++ b/DianaDynamic/DianaDynamic.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Views\Detail\" />
+    <Folder Include="wwwroot\Upload\Product\" />
   </ItemGroup>
 
 </Project>
